# gesture-recognition-library

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  setup_lite.py
.github/: ci.yml  dependabot.yml
.github/workflows/: ci.yml
gesture_recognition/classification/: __init__.py  tf_lite_classifier.py  trainable_classifier.py
gesture_recognition/classifiers/: __init__.py  sklearn_classifier.py  tf_lite_classifier.py  trainable_classifier.py
gesture_recognition/gesture_recognizer/: __init__.py  gesture_recognizer.py
gesture_recognition/gesture_recognizer/gesture_recognizer_builder/: __init__.py  gesture_recognizer_builder.py
gesture_recognition/mediapipe_cache/: __init__.py  mediapipe_cache.py  pickle_cache.py
gesture_recognition/preprocessing/: __init__.py  preprocessor.py  tf_lite_preprocessor.py
gesture_recognition/preprocessing/preprocessing_functions/: __init__.py  preprocessing_functions.py
gesture_recognition/preprocessors/: __init__.py  angle_preprocessor.py  default_preprocessor.py  distance_preprocessor.py  preprocessor.py  simple_preprocessor.py  tf_lite_preprocessor.py
poc/: asl_alphabet.py  rock_paper_scissors.py  senz3d.py  train_recognizer.py  train_tflite_recognizer.py
video_debugging/: __init__.py  continuous_video_debugger.py  frame_source.py  tflite_continuous_video_debugger.py
